Some_change_code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,13 @@
     <string-array name="categories_item">
         <item>Personal</item>
         <item>Professional</item>
-        <item>health</item>
+        <item>Health</item>
+        <item>Learning</item>
+        <item>Performance</item>
+        <item>Family</item>
+        <item>Financial</item>
+        <item>Business</item>
+
     </string-array>
 
 
